# pdata_cat

./: .gitignore  CODE_REVIEW_REPORT.json  dd.py  deep_dive.py  file::memory:?cache=shared  pyproject.toml  test_all_regions.py
config/: settings.yaml
docs/: CHANGELOG.md  MULTI_REGION_RESEARCH_REPORT.md  README.md  V2_MULTI_REGION_ARCHITECTURE.md  WORKLOG.md  api.md  multi_region_research_report.json  plan.md
src/ps5_scraper/: __init__.py  cli.py  config.py
src/ps5_scraper/api/: __init__.py  base.py  psstore_client.py  psstore_parser.py
src/ps5_scraper/collectors/: __init__.py  concurrent.py  pipelines.py  progress.py
src/ps5_scraper/models/: __init__.py  game.py  region.py
src/ps5_scraper/storage/: __init__.py  database.py  repositories.py
tests/unit/: test_base_client.py  test_cli.py  test_concurrent_collector.py  test_config.py  test_database.py  test_models.py  test_pipeline.py  test_progress_tracker.py  test_psstore_client.py  test_psstore_parser.py  test_region_model.py  test_repositories.py
