[project]
name = "ps5-hk-scraper"
version = "1.0.0"
description = "PS5 港服（PlayStation Store Hong Kong）数据采集工具 — 图片链接采集 + SQLite 持久化"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Hermes Agent", email = "hermes@example.com"},
]
keywords = ["ps5", "playstation", "scraper", "hong-kong", "gaming", "data-collection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
]

[project.scripts]
ps5-scraper = "ps5_scraper.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/ps5_scraper"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
